[metadata]
name = loid
version = 0.1.5
description = Read,Write and Publish from your terminal!.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/captain0jay/loid
author = Captain Jay
author_email = capja778@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = loid

[options]
packages = find:
install_requires =
    keyring>=23.5.0
    tabulate>=0.9.0
    rich>=13.7.0
    requests>=2.25.1
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    loid
    loid.*

[options.entry_points]
console_scripts =
    loid=loid.cli:main

[bumpversion]
current_version = 0.1.5
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:loid/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs